# OOP

./: .gitignore  Java-compile-run.md  README.md  cpp_microsoft.md  criteria.md  ide.excalidraw  Задания I.md  Задания-II.md
2020-fall/: tasks.md
2021-fall/: class_relations.md  plan2.md  plan_2.md  plan_cpp.md  plan_oop.md  tasks.md
2021-fall/chat_bot/: abstractchatbot.h  answers.cpp  chat_bot.pro  chatbot.h  loginwindow.h  mainwindow.h  mainwindow.ui
2021-fall/static_lib/: lib_example.h
2021-spring/: binf_files.md  tasks.md
2022/: 2darray.cpp  plan_cpp.md  plan_oop.md  plan_oop2.md  vector.cpp
C/: c_language.excalidraw  data_types_table.md  examples.md  locale_encoding.md  preprocessing.md  readme.md  tasks.md  Задания на учебную практику.docx.md
C/C_mk/: readme.md  tasks.md
C/examples/: http_requests.c
C/examples/CMake/: readme.md
C/examples/CMake/src/: CMakeLists.txt  main.c
C/examples/tests/: my_tests.c
C/examples_2025/: arrays.c  dyn_array.c  example2.c  example_cycles0.c  functions.c  main.c  matrix.c  structs.c
C/examples_2025/java_gui_arifm/: .gitignore  pom.xml
CPP_OOP/: 220_func_pointers_etc.md
SignalsAndSlots2/: main.cpp
SignalsAndSlots_Basic/: SignalsAndSlots.pro  a.h  b.cpp  b.h
distance-2020/: distance-2020.md
example_libs/example_lib/: example_lib.h  example_lib.pro  example_lib_global.h
example_libs/example_using_lib/: example_using_lib.pro  main.cpp
example_qml/: main.qml  qml_example0.pro
example_qt/: .gitignore  example_gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
example_qt0/: example_qt0.pro  main.cpp  mainwindow.cpp  mainwindow.h
example_qt_graphics/: example_qt_graphics.pro  widget.cpp  widget.h
example_qt_menu/: example_qt_menu.pro  mainwindow.cpp  mainwindow.h
example_qt_table/: mainwindow.cpp
example_qthread/: mainwindow.cpp  mainwindow.ui  qthread_example.pro  worker.cpp  worker.h
example_thread/: main.cpp
examples/CMake/: readme.md
examples/CMake/executable_with_lib/: CMakeLists.txt
examples/CMake/executable_with_lib/include/: hello_unit.h
examples/CMake/executable_with_lib/src/: main.cpp
examples/CMake/executable_with_tests(GTest)/: CMakeLists.txt
examples/CMake/executable_with_tests(GTest)/test/: CMakeLists.txt  main_test.cpp
examples/CMake/executable_with_tests(assert)/: CMakeLists.txt  readme.md
examples/CMake/executable_with_tests(assert)/src/: geometry.h
examples/CMake/executable_with_tests(assert)/test/: CMakeLists.txt  test.cpp
examples/CMake/library_example/: CMakeLists.txt
examples/CMake/library_example/src/: CMakeLists.txt  hello_unit.cpp
examples/CMake/simple_executable/: CMakeLists.txt
examples/CMake/simple_executable/src/: CMakeLists.txt  hello_unit.h
examples/Caculator_template/: Caculator_template.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  uml_classes.qmodel
examples/Cpp_WinRT_UWP/: App.cpp  App.h  App.idl  App.xaml  CppWinRTUWP.sln  CppWinRTUWP.vcxproj  CppWinRTUWP.vcxproj.filters  CppWinRTUWP_TemporaryKey.pfx  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  bank.h  pch.h  readme.md
examples/Csharp/: readme.md
examples/JavaFX/: readme.md
examples/SignalsAndSlots2/: SignalsAndSlots2.pro
examples/WinGUI/: readme.md
examples/WpfApp_DataGrid/: App.xaml  App.xaml.cs  Customer.cs  MainWindow.xaml.cs  WpfApp_DataGrid.sln
examples/chat_bot_template/: abstract_chatbot.cpp  abstract_chatbot.h  chat_bot_template.pro  chat_history.cpp  chat_history.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/cpp_map/: main.cpp
examples/example_opengl1/: example_opengl1.pro  main.cpp
examples/example_opengl2_animation/: main.cpp
examples/example_opengl2_lights/: main.cpp
examples/example_opengl3_interaction/: main.cpp
examples/example_qml/: calc.h  main.qml
examples/example_qt0/: mainwindow.h
examples/example_qt_graphics/: main.cpp  widget.h
examples/example_qt_menu/: icons.qrc
examples/example_qt_table/: example_gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/example_qthread/: mainwindow.ui
examples/example_thread/: example_thread.pro  main.cpp
examples/http/http_request/: CMakeLists.txt  http_reauest.cpp  http_request.cpp
examples/java/: HTTP_request.md  function-reference.md  json.md  junit.md  logging.md  pattern_matching.md  readme.md  timer.md
examples/lec_11_class_relations/: lec_11_class_relations.pro  main.cpp  person.cpp  sertificate.h  university.cpp  university.h
examples/lec_2_1/: main.cpp  matrix.cpp  matrix.h
examples/lec_3/: array.cpp  m42.h
examples/lec_4/: main.cpp
examples/lec_5_qt-project/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-project.pro
examples/lec_8_class/: complex.cpp  complex.h  lec_8_class.pro  main.cpp  square.adt.txt  square.cpp  square.h  test_square.h
examples/multy-window/: data.cpp  data.h  form.cpp  form.h  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  multy-window.pro
examples/openMP_1/: main.cpp  openMP_1.pro
examples/poly/: abstractprogrammer.cpp  abstractprogrammer.h  coder1.h  coder2.cpp  firma.cpp  firma.h  main.cpp  poly.pro  programm.h  uml.qmodel  university.h
examples/simple_class/: main.cpp  readme.md  seconds.h  simple_class.pro
managed_cpp/: managed_cpp.md
plans/: 2022-spring_distance.md  2023-fall_distance.md  2023-spring.md  2023_cpp.md  2023_fall_oop.md  2024-spring.md  2024_cpp.md  2024_fall_distance.md  2024_oop_1.md  2024_spring_distance.md  2025_cpp.md  2025_oop1.md  2025_oop2.md  2025_part1_distance.md  2026_oop2.md  dist2024-fall.md  tasks_cpp.md
plans/2021-fall/: plan_cpp.md
plans/2021-spring/: tasks.md
plans/2022/: plan_oop.md  plan_oop2.md  vector.cpp
plans/distance-2020/: distance-2020.md
poly/: coder1.cpp  coder1.h  coder2.h  firma.cpp  firma.h  main.cpp  no_poly.h  poly.pro  programm.cpp  student.cpp  student.h  university.cpp  university.h
qml_example0/: main.cpp  qml.qrc
simple_class/: main.cpp  seconds.cpp  simple_class.pro
simple_class/tests/: test.cpp  test.h
slides/assets/: events_cycle.excalidraw
unit_test/: unit_test.md
(+210 files in other folders)
